<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nhatton.simplemess.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/login_form"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:background="@drawable/logo_sm"
        android:contentDescription="@string/sm_logo" />

    <LinearLayout
        android:id="@+id/form_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_form"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/prompt_email"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/input_box"
                android:inputType="textEmailAddress"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_email_input"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/prompt_password"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@drawable/input_box"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_for_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/input_box"
            android:backgroundTint="@color/colorGray"
            android:text="@string/action_sign_in"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/email_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/input_box"
            android:backgroundTint="@color/colorWhite"
            android:text="@string/action_sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:layout_below="@id/buttons_for_email"
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
